# hooklet

./: .coveragerc  .flake8  .gitignore  .pylintrc  MANIFEST.in  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  test.py
.github/workflows/: integration.yml
ems/: __init__.py  config.py  nats_manager.py  publisher.py  strategy.py
ems/collection/emitter/: __init__.py  example.py
ems/collection/handler/: __init__.py  example.py
ems/core/: __init__.py  emitter.py  executor.py  handler.py
ems/event_executor/: executor.py
ems/publishers/: README.md  __init__.py  advanced.py  binance.py  external.py  market.py
examples/: eventrix_logging_example.py  example_emitter.py  example_logger.py  example_rpc.py  example_worker.py  nats_example.py  run_example.py
examples/v1/: nats_router_example.py  zmq_example.py
examples/v2/: nats_example.py
hooklet/: __init__.py  base.py  types.py
hooklet/base/: README.md  __init__.py  base.py  node.py  pilot.py  types.py
hooklet/collection/emitter/: example.py
hooklet/collection/handler/: example.py
hooklet/core/: emitter.py  executor.py  handler.py
hooklet/eventrix/: __init__.py  emitter.py  handler.py  pipe.py
hooklet/eventrix/collection/: __init__.py
hooklet/eventrix/collection/emitter/: __init__.py  example.py  example_router.py
hooklet/eventrix/collection/handler/: example.py  example_router.py
hooklet/eventrix/dag/: vertex.py
hooklet/eventrix/v1/: __init__.py  emitter.py
hooklet/eventrix/v2/: node.py
hooklet/logger/: README.md  __init__.py  eventrix_logger.py  example.py  hooklet_logger.py  node_logger.py
hooklet/node/: __init__.py  emitter.py  emmiter.py  mq.py  pipe.py  rpc.py  sinker.py  worker.py
hooklet/pilot/: __init__.py  inproc_pilot.py  nats_pilot.py  zmq_pilot.py
hooklet/utils/: README.md  __init__.py  generator.py  header_validator.py  id_generator.py
natsio/: __init__.py
natsio/collection/emitter/: example.py
natsio/collection/handler/: example.py
natsio/core/: emitter.py  executor.py  handler.py
scripts/: advanced_publishers_example.py  create_oco_order.py  custom_publisher_example.py  custom_publisher_implementations.py  deploy.sh  install_dev.sh  lint.sh  market_data_simulator.py  multi_publisher_example.py  nats_example.py  nats_manager_example.py  run_example.py  strategy_example.py  stream_kline_example.py  stream_orderbook_example.py  test.sh  user_data_stream.py
test_scripts/: example_pushpull.py  example_pushpull_simple.py
tests/: test_config.py  test_nats_manager.py
tests/eventrix/collection/emitter/: test_example.py
tests/eventrix/collection/handler/: test_example.py
tests/node/: test_emitter.py  test_pipe.py  test_rpc.py  test_sinker.py  test_worker.py
tests/pilot/: test_inproc_pilot.py  test_nats_pilot.py
(+10 files in other folders)
