[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hooklet"
description = "An asynchronous, event-driven Python framework using NATS messaging system"
version = "0.4.3"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Yite", email = "coastq22889@icloud.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
dependencies = [
    "nats-py>=2.3.1",
    "PyYAML>=6.0",
    "pyzmq>=26.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hooklet*"]
exclude = ["logs*", "tests*", "examples*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.3",
    "black",
    "isort",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["__pycache__/*", "*.pyc", "venv*/*"]
